<resources>
    <string name="app_name">InventoryWidget</string>
    <string name="widget_name">Inventory</string>
    <string name="appwidget_text">Text</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="inventory_question">¿Cuánto tengo de inventario?</string>
    <string name="manage_inventory">Gestionar Inventario</string>
    <string name="inventory">Inventory</string>
    <string name="imagen_de_inventario">Imagen de inventario</string>
    <string name="imagen_de_huella">Imagen de huella</string>
    <string name="logout">Cerrar sesión</string>
    <string name="button_add">buttonadd</string>
    <string name="idProduct">Id: 1</string>
    <string name="priceProduct">$15.000,00</string>
    <string name="nameProduct">zapatos</string>
</resources>